@@ -196,7 +196,7 @@ public class NRTCachingDirectory extends Directory {
       System.out.println("nrtdir.deleteFile name=" + name);
     }
     if (cache.fileExists(name)) {
-      assert !delegate.fileExists(name);
+      assert !delegate.fileExists(name): "name=" + name;
       cache.deleteFile(name);
     } else {
       delegate.deleteFile(name);
@@ -225,8 +225,18 @@ public class NRTCachingDirectory extends Directory {
       if (VERBOSE) {
         System.out.println("  to cache");
       }
+      try {
+        delegate.deleteFile(name);
+      } catch (IOException ioe) {
+        // This is fine: file may not exist
+      }
       return cache.createOutput(name);
     } else {
+      try {
+        cache.deleteFile(name);
+      } catch (IOException ioe) {
+        // This is fine: file may not exist
+      }
       return delegate.createOutput(name);
     }
   }
@@ -270,6 +280,11 @@ public class NRTCachingDirectory extends Directory {
    *  to the delegate and then closes the delegate. */
   @Override
   public void close() throws IOException {
+    // NOTE: technically we shouldn't have to do this, ie,
+    // IndexWriter should have sync'd all files, but we do
+    // it for defensive reasons... or in case the app is
+    // doing something custom (creating outputs directly w/o
+    // using IndexWriter):
     for(String fileName : cache.listAll()) {
       unCache(fileName);
     }
@@ -301,28 +316,39 @@ public class NRTCachingDirectory extends Directory {
     return !name.equals(IndexFileNames.SEGMENTS_GEN) && (merge == null || merge.estimatedMergeBytes <= maxMergeSizeBytes) && cache.sizeInBytes() <= maxCachedBytes;
   }
 
-  private void unCache(String fileName) throws IOException {
-    final IndexOutput out;
-    synchronized(this) {
-      if (!delegate.fileExists(fileName)) {
-        assert cache.fileExists(fileName);
-        out = delegate.createOutput(fileName);
-      } else {
-        out = null;
-      }
-    }
+  private final Object uncacheLock = new Object();
 
-    if (out != null) {
-      IndexInput in = null;
-      try {
+  private void unCache(String fileName) throws IOException {
+    // Only let one thread uncache at a time; this only
+    // happens during commit() or close():
+    IndexOutput out = null;
+    IndexInput in = null;
+    try {
+      synchronized(uncacheLock) {
+        if (VERBOSE) {
+          System.out.println("nrtdir.unCache name=" + fileName);
+        }
+        if (!cache.fileExists(fileName)) {
+          // Another thread beat us...
+          return;
+        }
+        if (delegate.fileExists(fileName)) {
+          throw new IOException("cannot uncache file=\"" + fileName + "\": it was separately also created in the delegate directory");
+        }
+        out = delegate.createOutput(fileName);
+
         in = cache.openInput(fileName);
         in.copyBytes(out, in.length());
-      } finally {
-        IOUtils.close(in, out);
+
+        // Lock order: uncacheLock -> this
+        synchronized(this) {
+          // Must sync here because other sync methods have
+          // if (cache.fileExists(name)) { ... } else { ... }:
+          cache.deleteFile(fileName);
+        }
       }
-      synchronized(this) {
-        cache.deleteFile(fileName);
-      }
+    } finally {
+      IOUtils.close(in, out);
     }
   }
 }
