@@ -31,9 +31,7 @@ import org.apache.lucene.document.Field;
 public class TestCrash extends LuceneTestCase {
 
   private IndexWriter initIndex(Random random, boolean initialCommit) throws IOException {
-    // note: we pass 'false' here so our crashing/deleting won't trigger assertions in NRTCachingDir
-    // TODO: don't remember why this is ok... maybe we should check again that it really actually is.
-    return initIndex(random, newDirectory(random, false), initialCommit);
+    return initIndex(random, newDirectory(random), initialCommit);
   }
 
   private IndexWriter initIndex(Random random, MockDirectoryWrapper dir, boolean initialCommit) throws IOException {
